added PD comment at start

--- a/2015_16/1_introduction/1_introduction.code.tex
+++ b/2015_16/1_introduction/1_introduction.code.tex
@@ -1,3 +1,12 @@
+%1_introduction.code.tex
+%beamer slide for the course PandA1 COMS10002 
+%taught at the University of Bristol
+%2015 Conor Houghton conor.houghton@bristol.ac.uk
+
+%To the extent possible under law, the author has dedicated all copyright 
+%and related and neighboring rights to these notes to the public domain 
+%worldwide. These notes are distributed without any warranty. 
+
 \documentclass{beamer}
 \usepackage{listings}
 \lstset{language=C}
