--- a/2015_16/1_introduction/1_introduction.code.tex
+++ b/2015_16/1_introduction/1_introduction.code.tex
@@ -16,7 +16,7 @@
 \subsection*{1. Introduction}
 
 
-\begin{frame}[fragile]{linear search}
+\begin{frame}[fragile]{Insert sort}
 \begin{lstlisting}[numbers=left]
 void sort(int a[],int n)
 {
