--- a/2015_16/2_big_oh/log.tex
+++ b/2015_16/2_big_oh/log.tex
@@ -75,30 +75,30 @@
   \begin{picture}(7200.00,5040.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(594,440){\makebox(0,0)[r]{\strut{} 0}}%
-      \put(594,1059){\makebox(0,0)[r]{\strut{} 10}}%
-      \put(594,1679){\makebox(0,0)[r]{\strut{} 20}}%
-      \put(594,2298){\makebox(0,0)[r]{\strut{} 30}}%
-      \put(594,2917){\makebox(0,0)[r]{\strut{} 40}}%
-      \put(594,3536){\makebox(0,0)[r]{\strut{} 50}}%
-      \put(594,4156){\makebox(0,0)[r]{\strut{} 60}}%
-      \put(594,4775){\makebox(0,0)[r]{\strut{} 70}}%
-      \put(726,220){\makebox(0,0){\strut{} 0}}%
-      \put(1739,220){\makebox(0,0){\strut{} 1}}%
-      \put(2752,220){\makebox(0,0){\strut{} 2}}%
-      \put(3765,220){\makebox(0,0){\strut{} 3}}%
-      \put(4777,220){\makebox(0,0){\strut{} 4}}%
-      \put(5790,220){\makebox(0,0){\strut{} 5}}%
-      \put(6803,220){\makebox(0,0){\strut{} 6}}%
+      \put(726,704){\makebox(0,0)[r]{\strut{} 0}}%
+      \put(726,1383){\makebox(0,0)[r]{\strut{} 0.5}}%
+      \put(726,2061){\makebox(0,0)[r]{\strut{} 1}}%
+      \put(726,2740){\makebox(0,0)[r]{\strut{} 1.5}}%
+      \put(726,3418){\makebox(0,0)[r]{\strut{} 2}}%
+      \put(726,4097){\makebox(0,0)[r]{\strut{} 2.5}}%
+      \put(726,4775){\makebox(0,0)[r]{\strut{} 3}}%
+      \put(858,484){\makebox(0,0){\strut{} 1}}%
+      \put(1849,484){\makebox(0,0){\strut{} 1.5}}%
+      \put(2840,484){\makebox(0,0){\strut{} 2}}%
+      \put(3831,484){\makebox(0,0){\strut{} 2.5}}%
+      \put(4821,484){\makebox(0,0){\strut{} 3}}%
+      \put(5812,484){\makebox(0,0){\strut{} 3.5}}%
+      \put(6803,484){\makebox(0,0){\strut{} 4}}%
+      \put(3830,154){\makebox(0,0){\strut{}$x$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(5816,4602){\makebox(0,0)[r]{\strut{}$2^x$}}%
+      \put(1450,4602){\makebox(0,0)[r]{\strut{}$\log_2{x}$}}%
       \csname LTb\endcsname%
-      \put(5816,4382){\makebox(0,0)[r]{\strut{}$x^2+1$}}%
+      \put(1450,4382){\makebox(0,0)[r]{\strut{}$x-1$}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{I.2.exp.eps}}%
+    \put(0,0){\includegraphics{log.eps}}%
     \gplfronttext
   \end{picture}%
 \endgroup
