--- a/2015_16/2_big_oh/2_big_oh.code.tex
+++ b/2015_16/2_big_oh/2_big_oh.code.tex
@@ -4,62 +4,20 @@
 
 \begin{document}
 
-\subsection*{I.2 Big Oh notation}
+\subsection*{2 Big Oh notation}
 
-
-\begin{frame}[fragile]{linear search}
-\begin{lstlisting}[numbers=left]
-int search(int a[],int n, int val)
-{
-
-  int i;
-
-  for(i=0;i<n;i++)
-    {
-      if(a[i]==val)
-	return i;
-    }
-
-  return -1;
-}
-\end{lstlisting}
-\end{frame}
-
-\begin{frame}[fragile]{binary search}
-\begin{lstlisting}[numbers=left] 
-int search(int a[],int n, int val)
-{
-  int mid, low=0, high=n-1;
-
-  while(low<=high)
-    {
-      mid=(low+high)/2;
-      if(a[mid]==val)
-        return mid;
-      else if(val>a[mid])
-        low=mid+1;
-      else
-        high=mid -1;
-    }
-
-  return -1;
-}
-\end{lstlisting}
-\end{frame}
 
 \begin{frame}[fragile]{largest element}
 \begin{lstlisting}[numbers=left]
 int search(int a[],int n)
 {
+   int i;
+   int best_val=a[0];
 
-  int i;
-  int best_val=a[0];
-
-  for(i=1;i<n;i++)
-    {
+   for(i=1;i<n;i++){
       if(a[i]>best_val)
-	best_val= a[i];
-    }
+         best_val= a[i];
+   }
 
   return best_val;
 }
