fixing error with graph

--- a/2015_16/1_introduction/1_introduction.tex
+++ b/2015_16/1_introduction/1_introduction.tex
@@ -221,7 +221,7 @@ that the curve is extremely well matched by $n^2$, the sub-leading
 order terms, the $n$ term and the constant, aren't important.
 
 \begin{figure}
-\include{I.1.insert_sort_timing}
+\include{insert_sort_timing}
 \caption{Run time for sort. The program was run 500 times for each
   value of $n$ and the $y$-axis gives the total run time in seconds on
   my laptop, while I was also doing other things like typing this
