--- a/2015_16/1_introduction/insert_sort_timing.tex
+++ b/2015_16/1_introduction/insert_sort_timing.tex
@@ -95,7 +95,7 @@
       \put(5816,4382){\makebox(0,0)[r]{\strut{}fit}}%
     }%
     \gplbacktext
-    \put(0,0){\includegraphics{I.1.insert_sort_timing.eps}}%
+    \put(0,0){\includegraphics{insert_sort_timing.eps}}%
     \gplfronttext
   \end{picture}%
 \endgroup
