--- a/2015_16/3_search/3_search.tex
+++ b/2015_16/3_search/3_search.tex
@@ -65,8 +65,7 @@ int search(int a[],int n, int val)
 {
   int mid, low=0, high=n-1;
 
-  while(low<=high)
-    {
+  while(low<=high){
       mid=(low+high)/2;
       if(a[mid]==val)
 	return mid;
