correcting typos adding note

--- a/2015_16/worksheets/worksheet1.tex
+++ b/2015_16/worksheets/worksheet1.tex
@@ -76,9 +76,10 @@ complexity?
   their deity, a task whose importance is central to their belief
   system. We are told that this name is nine or fewer characters long
   and that no characters can occur more than three times in sequence,
-  so AABBAABBA is a possible name, but AAABBAABB is not. We are not
-  told how many characters the alphabet contains. Assuming there are
-  18 letters and $n$ or few words, how many names are there.
+  so AABBAABBA is a possible name, as is AAABBAABB, but AAAABBAAB is
+  not (see note below). We are not told how many characters the alphabet
+  contains. Assuming there are 18 letters and $n$ or fewer words, how
+  many names are there.
 
 \item Consider another arithmetic operation, or a different algorithm for one of the operations above, describe it and estimate the big-oh complexity. Examples might be long division or the peasant algorithm for multiplication.
 
@@ -87,6 +88,15 @@ complexity?
   or the Traveling Salesman problem.
 \end{enumerate}
 
+\subsubsection*{Note from the Arthur C Clarke story in Q3}
 
+The restriction the permits letters to repeat three times but not four may seem surprising, this is noted in the stort
+\begin{quotation}
+\lq{}[W]e use a special alphabet of our own. Modifying the electromatic typewriters to deal with this is, of course, trivial. A rather more interesting problem is that of devising suitable circuits to eliminate ridiculous combinations. For example, no letter must occur more than three times in succession.\rq{}
+
+\lq{}Three? Surely you mean two.\rq{}
+
+\lq{}Three is correct: I am afraid it would take too long to explain why, even if you understood our language.\rq{}
+\end{quotation}
 
 \end{document}
