--- a/2015_16/worksheets/worksheet1.tex
+++ b/2015_16/worksheets/worksheet1.tex
@@ -20,7 +20,7 @@
 
 \subsection*{Algorithms Worksheet 1}
 
-This worksheet contains a mostly pen and paper calculations. The
+This worksheet contains mostly pen and paper calculations. The
 solutions should be submitted as plain text, files in other formats,
 like .doc or .pdf will not be accepted. You can write $x^\wedge n$ and
 $a\_n$ for $x^n$ and $a_n$. For each part of a question write the
@@ -46,7 +46,7 @@ and 5 are the extension questions.
 
 
 \item This question is about estimating the algorithmic complexity of
-  evaluating a polynomial or multiplying matrices. Here consider fixed
+  evaluating a polynomial or multiplying matrices. Here, consider fixed
   sized variables, so multiplication and addition take roughly one
   step, irrespective of how many digits the number has. Once again,
   powers are calculated by multiplication.
@@ -74,7 +74,7 @@ where the components $c_{ij}$ of $C$ are given by
 $$
 c_{ij}=sum_{k}a_{ik}b_{kj}
 $$ with $A=[a_{ij}]$ and $B=[b_{ij}$. What is the big-oh complexity of
-  matrix multiplication.
+  multiplying two square matrices?
 
 
 
@@ -84,14 +84,14 @@ $$ with $A=[a_{ij}]$ and $B=[b_{ij}$. What is the big-oh complexity of
 \item This question is intended to help you practice counting
   things. In the Arthur C. Clarke short story \textsl{The Nine Billion
     Names of God} a \lq{}Mark V Automatic Sequence Computer\rq{} is
-  purchase by a religious community to list all the possible names of
+  purchased by a religious community to list all the possible names of
   their deity, a task whose importance is central to their belief
   system. We are told that this name is nine or fewer characters long
   and that no characters can occur more than three times in sequence,
   so AABBAABBA is a possible name, as is AAABBAABB, but AAAABBAAB is
-  not (see note below). We are not told how many characters the alphabet
-  contains. Assuming there are 18 letters and $n$ or fewer words, how
-  many names are there.
+  not (see note below). We are not told how many characters the
+  alphabet contains. Assuming there are 18 letters in the alphabet and
+  $n$ or fewer letters in each word, how many names are there?
 
 \item Consider another arithmetic operation, or a different algorithm
   for one of the operations above, describe it and estimate the big-oh
@@ -105,7 +105,8 @@ $$ with $A=[a_{ij}]$ and $B=[b_{ij}$. What is the big-oh complexity of
 
 \subsubsection*{Note from the Arthur C Clarke story in Q3}
 
-The restriction the permits letters to repeat three times but not four may seem surprising, this is noted in the stort
+The restriction permits letters to repeat three times but not four may
+seem surprising, this is noted in the stort
 \begin{quotation}
 \lq{}[W]e use a special alphabet of our own. Modifying the electromatic typewriters to deal with this is, of course, trivial. A rather more interesting problem is that of devising suitable circuits to eliminate ridiculous combinations. For example, no letter must occur more than three times in succession.\rq{}
 
