Typo: stort ~> story

--- a/2015_16/worksheets/worksheet1.tex
+++ b/2015_16/worksheets/worksheet1.tex
@@ -106,7 +106,7 @@ $$ with $A=[a_{ij}]$ and $B=[b_{ij}$. What is the big-oh complexity of
 \subsubsection*{Note from the Arthur C Clarke story in Q3}
 
 The restriction permits letters to repeat three times but not four may
-seem surprising, this is noted in the stort
+seem surprising, this is noted in the story
 \begin{quotation}
 \lq{}[W]e use a special alphabet of our own. Modifying the electromatic typewriters to deal with this is, of course, trivial. A rather more interesting problem is that of devising suitable circuits to eliminate ridiculous combinations. For example, no letter must occur more than three times in succession.\rq{}
 
