--- a/2015_16/worksheets/worksheet1.tex
+++ b/2015_16/worksheets/worksheet1.tex
@@ -72,8 +72,8 @@ complexity?
 $$C=AB$$
 where the components $c_{ij}$ of $C$ are given by
 $$
-c_{ij}=sum_{k}a_{ik}b_{kj}
-$$ with $A=[a_{ij}]$ and $B=[b_{ij}$. What is the big-oh complexity of
+c_{ij}=\sum\limits{_{k=1}^n}a_{ik}b_{kj}
+$$ with $A=[a_{ij}]$ and $B=[b_{ij}]$. What is the big-oh complexity of
   multiplying two square matrices?
 
 
