--- a/2015_16/4_recursion/4_recursion.tex
+++ b/2015_16/4_recursion/4_recursion.tex
@@ -39,7 +39,10 @@ Table~\ref{c_factorial_fancy}. You will have learned that recursion is
 often a good way to implement algorithms on computers, that many
 algorithms can be designed recursively and that this is usually the
 best way to program them. Being comfortable with recursion is one of
-the signs of, and benefits of, learning to program properly!
+the signs of, and benefits of, learning to program properly! We will
+also see that working out the big-oh complexity for many recursive
+algorithms can be straight-forward using a set of formula known as
+the master equation.
 
 A recursive function consists of two parts, a \lq{}recursive
 case\rq{}, what happens normally, here return n*factorial(n-1), and a
