typos corrected, clarified Q3

--- a/2015_16/worksheets/worksheet1.tex
+++ b/2015_16/worksheets/worksheet1.tex
@@ -89,9 +89,13 @@ $$ with $A=[a_{ij}]$ and $B=[b_{ij}]$. What is the big-oh complexity of
   system. We are told that this name is nine or fewer characters long
   and that no characters can occur more than three times in sequence,
   so AABBAABBA is a possible name, as is AAABBAABB, but AAAABBAAB is
-  not (see note below). We are not told how many characters the
-  alphabet contains. Assuming there are 18 letters in the alphabet and
-  $n$ or fewer letters in each word, how many names are there?
+  not (see note below). We are not told in the story how many
+  characters the alphabet contains but for definiteness lets assume
+  there are 18 letters in the alphabet. Show how you could calculated
+  how many names there are with $n$; in other words, describe a method
+  for calculating the number of names of up to length $n$, this method
+  could be used to calculate the number of names of length nine, but
+  that isn't required, just the method.
 
 \item Consider another arithmetic operation, or a different algorithm
   for one of the operations above, describe it and estimate the big-oh
