--- a/2015_16/5_master/5_master.tex
+++ b/2015_16/5_master/5_master.tex
@@ -100,8 +100,8 @@ cases; in the first case $f(n)$ grows slowly enough to allow the first
 term to dominate the behaviour, in the third case $f(n)$ grows so fast
 it takes control. The second case is a kind of in-between case. Since
 the first case is about $f(n)$ being growing slower than $n^{\log_ba}$
-we specify the behavior of $f(n)$ using big-oh: $f(n)\O(n^c)$ for
-$c<log_ba$. Conversely, the third case applies to functions that grow
+we specify the behavior of $f(n)$ using big-oh: $f(n)\in O(n^c)$ for
+$c<\log_ba$. Conversely, the third case applies to functions that grow
 faster than $n^c$ so we specify the behavior of $f(n)$ using
 big-Omega. Finally, the middle case applies only to functions that
 grow like $n^c$, not faster, not slower, so we specify $f(n)$ using big-Theta.
