some comments on plotting

--- a/2015_16/6_fibonacci/6_fibonacci.tex
+++ b/2015_16/6_fibonacci/6_fibonacci.tex
@@ -14,7 +14,7 @@
 \usepackage{listings}
 \lstset{language=C}
 \pagestyle{headings}
-\markright{COMS10002 - PandA1 5\_master - Conor}
+\markright{COMS10002 - PandA1 6\_fibonacci - Conor}
 \begin{document}
 
 \subsection*{6 The interesting case of the Fibonacci sequence}
