--- a/2015_16/worksheets/worksheet2.tex
+++ b/2015_16/worksheets/worksheet2.tex
@@ -20,23 +20,22 @@
 
 \subsection*{Algorithms Worksheet 2}
 
-DRAFT!
-
 This worksheet contains mostly pen and paper calculations. The
-solutions should be submitted as plain text, files in other formats,
-like .doc or .pdf will not be accepted. You can write $x^\wedge n$ and
-$a\_n$ for $x^n$ and $a_n$. Where applicable, write a short
-description of how the answer is obtained. The graph in part 6 should
-be submitted as an eps file.
+solutions should be submitted as plain text, that is .txt, files in
+other formats, like .rtf, .tex, .doc or .pdf will not be accepted. You
+can write $x^\wedge n$ and $a\_n$ for $x^n$ and $a_n$. Where
+applicable, write a short description of how the answer is
+obtained. The graph in part 6 should be submitted as an eps or pdf
+file.
 
 \begin{enumerate}
 
-\item [15 marks] This question is about solving recursion relations using
+\item This question is about solving recursion relations using
   telescoping. In each case find the value of $T(n)$ by
   telescoping. Check your answer by substitution, it is permisseable
   to combine these two steps by using telescoping to come up with an
   ansatz and then substituting it fix values in the ansatz. Write down
-  the big-Theta for the solution.
+  the big-Theta for the solution. [25 marks] 
 
 \begin{enumerate}
 \item $T(n)=T(n-1)+3$ with $T(0)=1$
@@ -46,7 +45,10 @@ be submitted as an eps file.
 \item $T(n)=3T(n-1)+2$ with $T(0)=1$
 \end{enumerate}
 
-\item [20 marks] this question is about the asymptotic behavior of different functions, in each case give big-Theta for $T(n)$; if $T(n)$ was the worst case run-time this would give big-Oh. There is no need to give any working for this problem.
+\item This question is about the asymptotic behavior of
+  different functions, in each case give big-Theta for $T(n)$; if
+  $T(n)$ was the worst case run-time this would give big-Oh. There is
+  no need to give any working for this problem.  [20 marks]
 
 \begin{enumerate}
 
@@ -55,42 +57,44 @@ be submitted as an eps file.
 \item $T(n)=2^n+n!$
 \item $T(n)=\sum_{i=0}^ni$
 \item $T(n)=\sqrt{n}n+n$
-\item $T(n)=\frac{n^2}{\log{n}}+n$
-\item $T(n)=\frac{n^5+345n^4+36n}{n^2+2n+1}$
-\item $T(n)=\frac{1}{n^2+2n+1}$
-\item $T(n)=\frac{(n+1)(n+2)(n+3)}{(n+4)(n+5)}$
-\item $T(n)=\frac{n!}{(n-1)!}$
+\item $T(n)=n^2/\log{n}+n$
+\item $T(n)=(n^5+345n^4+36n)/(n^2+2n+1)$
+\item $T(n)=1/(n^2+2n+1)$
+\item $T(n)=[(n+1)(n+2)(n+3)]/[(n+4)(n+5)]$
+\item $T(n)=n!/(n-1)!$
 
 \end{enumerate}
 
-\item [10 marks] Solve for $T(n)$ using the ansatz $T(n)=r^n$ for the following
+\item Solve for $T(n)$ using the ansatz $T(n)=r^n$ for the following
   two step recursion relations. Solving for $r$ will give two values
   $r_1$ and $r_2$, this means that general solution will be
-  $T(n)=Ar_1^n+Br_2^n$. Use the two base values to find $A$ and $B$.
+  $T(n)=Ar_1^n+Br_2^n$. Use the two base values to find $A$ and $B$.  [10 marks]
 
 \begin{enumerate}
 \item $T(n)=T(n-1)+3T(n-2)$ with $T(0)=0$ and $T(1)=5$.
 \item $T(n)=T(n-2)$ with $T(0)=0$ and $T(1)=2$.
 \end{enumerate}
 
-\item [15 marks] This question is about the master theorem. Use it to calculate big-Theta for $T(n)$ in each case
+\item This question is about the master theorem. Use it to
+  calculate big-Theta for $T(n)$ in each case.  [15 marks] 
 
 \begin{enumerate}
 \item $T(n)= 25T(n/5)+4n^2$
 \item $T(n)= 20T(n/5)+4n$
 \item $T(n)= 16T(n/2)+2n^4$
-\end{equation}
+\end{enumerate}
 
-\item [20 marks] For one of the folr based algorithms, you looked at
+\item For one of the \texttt{folr}-based algorithms, you looked at
   in last week's Haskell work sheet, work out the asymptotic
-  complexity.
+  complexity.  [10 marks]
 
-\item [20 marks] In the section 1\_introduction the actual run time
+\item In the section 1\_introduction the actual run time
   for insert sort was plotted against the size of the set. Using
   another algorithm whose asypmtotic behavior you know, make a similar
   plot. I use \texttt{gnuplot} to do plots and instructions for this
-  are provided in the 1\_introduction folder.
+  are provided in the 1\_introduction folder, you can use other
+  plotting packages but please submit the graph as pdf or eps.  [20 marks]
 
-
+\end{enumerate}
 
 \end{document}
