--- a/2015_16/worksheets/worksheet2.tex
+++ b/2015_16/worksheets/worksheet2.tex
@@ -71,7 +71,7 @@ file.
   $T(n)=Ar_1^n+Br_2^n$. Use the two base values to find $A$ and $B$.  [10 marks]
 
 \begin{enumerate}
-\item $T(n)=T(n-1)+3T(n-2)$ with $T(0)=0$ and $T(1)=5$.
+\item $T(n)=2T(n-1)+3T(n-2)$ with $T(0)=0$ and $T(1)=5$.
 \item $T(n)=T(n-2)$ with $T(0)=0$ and $T(1)=2$.
 \end{enumerate}
 
@@ -84,12 +84,13 @@ file.
 \item $T(n)= 16T(n/2)+2n^4$
 \end{enumerate}
 
-\item In the section 1\_introduction the actual run time
-  for insert sort was plotted against the size of the set. Using
-  another algorithm whose asypmtotic behavior you know, make a similar
-  plot. I use \texttt{gnuplot} to do plots and instructions for this
-  are provided in the 1\_introduction folder, you can use other
-  plotting packages but please submit the graph as pdf or eps.  [20 marks]
+\item In the section 1\_introduction the actual run time for insert
+  sort was plotted against the size of the set. Using another
+  algorithm whose asymptotic behavior you know, make a similar plot. I
+  use \texttt{gnuplot} to do plots and instructions for this are
+  provided in the 1\_introduction folder, you can use other plotting
+  packages but please submit the graph as pdf or eps. This can be any
+  algorithm, so binary or linear search would be good. [20 marks]
 
 \end{enumerate}
 
