--- a/2015_16/worksheets/worksheet2.tex
+++ b/2015_16/worksheets/worksheet2.tex
@@ -25,16 +25,16 @@ solutions should be submitted as plain text, that is .txt, files in
 other formats, like .rtf, .tex, .doc or .pdf will not be accepted. You
 can write $x^\wedge n$ and $a\_n$ for $x^n$ and $a_n$. Where
 applicable, write a short description of how the answer is
-obtained. The graph in part 6 should be submitted as an eps or pdf
+obtained. The graph in part 5 should be submitted as an eps or pdf
 file.
 
 \begin{enumerate}
 
 \item This question is about solving recursion relations using
   telescoping. In each case find the value of $T(n)$ by
-  telescoping. Check your answer by substitution, it is permisseable
+  telescoping. Check your answer by substitution, it is permissible
   to combine these two steps by using telescoping to come up with an
-  ansatz and then substituting it fix values in the ansatz. Write down
+  ansatz and then substituting it to fix values in the ansatz. Write down
   the big-Theta for the solution. [25 marks] 
 
 \begin{enumerate}
