--- a/2015_16/5_master/5_master.tex
+++ b/2015_16/5_master/5_master.tex
@@ -41,7 +41,7 @@ solved. In the binary search example the size of this part of the
 problem didn't depend on $n$ so $f(n)=t_0$ for some constant $t_0$, or put
 another way, $f(n)\in O(1)$.
 
-The master theorem tells us how the big-oh complexity of $T(n)$ if the
+The master theorem tells us the big-oh complexity of $T(n)$ if the
 large $n$ behavior of $f(n)$ satisfies some conditions which depend on
 $a$ and $b$. Furthermore, it is a proper theorem, our aim in this
 course is to get used to doing rough estimates of complexity without
