--- a/2015_16/9_radix_sort/9_radix_sort.tex
+++ b/2015_16/9_radix_sort/9_radix_sort.tex
@@ -21,12 +21,13 @@
 Radix sort is very old, older than electronic computing; it dates back
 to sorting methods developed by Herman Hollerith in the 1880s to use
 with punch cards and tabulating machines. It allowed the 1890 US
-census to be counted in one year, the 1880 census had taken
-eight. Hollerith went on to start a company, the Tabulating Machine
-Company, which worked on censuses in lots of different countries and
-was one of the four companies which merged to form what became
-IBM. There are a number of varieties of radix sort, here we will look
-at least significant digit sort. 
+census to be counted in one year, the 1880 census had taken eight and
+had been feared that the 1890 census wouldn't be counted in time for
+the 1900 census. Hollerith went on to start a company, the Tabulating
+Machine Company, which worked on censuses in lots of different
+countries and was one of the four companies which merged to form what
+became IBM. There are a number of varieties of radix sort, here we
+will look at least significant digit sort.
 
 Radix sort algorithms rely on the data being of the right form; for
 our description we assume the data is made up of interger entries. The
@@ -43,16 +44,19 @@ bucket are then stacked back together from lowest to highest so the
 entries are arranged in order of their last digit. The same process is
 carried out on the next significant digit, the key thing is that
 entries that go into the same bucket do so in the same order they were
-in in the array. If the initial array was $\{27,17,23,14\}$ for
-example, then the first run through will put them into three buckets,
-the {\bf 3} bucket will hold 23, the {\bf 4} buckets 14 and the {\bf
-  7} bucket 27 and 17; when the piles are put back in order the array
-is $\{23,14,27,17\}$. This is then bucketed by the second digit, so
-the {\bf 1} bucket holds 14 and 17, in that order since that's the
-order they are in in the most recent version of the array, the {\bf 2}
-bucket hold 23 and 27 so when they are put together the array is
-sorted: $\{14,17,23,27\}$. This is repeated until all the significant
-figures have been sorted. Table~\ref{table_radix} gives an example.
+in in the array sp the sorting of their least significant digit is
+preserved. 
+
+If the initial array was $\{27,17,23,14\}$ for example, then the first
+run through will put them into three buckets, the {\bf 3} bucket will
+hold 23, the {\bf 4} buckets 14 and the {\bf 7} bucket 27 and 17; when
+the piles are put back in order the array is $\{23,14,27,17\}$. This
+is then bucketed by the second digit, so the {\bf 1} bucket holds 14
+and 17, in that order since that's the order they are in in the most
+recent version of the array, the {\bf 2} bucket hold 23 and 27 so when
+they are put together the array is sorted: $\{14,17,23,27\}$. This is
+repeated until all the significant figures have been
+sorted. Table~\ref{table_radix} gives an example.
 
 While punch cards were literally put in buckets the usual way to radix
 sort arrays is by counting. Basically, the algorithm runs through the
@@ -111,20 +115,21 @@ b7&21&41&61&53&63&23&0&3
 \caption{The bucket in action. Here we have a list of numbers being
   sorted by the least significant digit, for illustrative purposes the
   entries all have least significant digit 1 or 3. The original array
-  is marked a, the last two digits represent the {\bf 1} and {\bf 3} buckets,
-  there are three entries in each bucket. The new array b is used to
-  store the contents of the buckets, this is done in lines
-  b1-b7. Since 1 comes before 3, the {\bf 1} bucket entries are assigned the
-  first three slots in b and the {\bf 3} bucket the slots 4-6. Thus, the
-  number for the {\bf 3} bucket is set to 6, which is the total number of
-  entries in buckets for values less than or equal to 3. First 23 is
-  considered in line b2, since its digit is 3 it is in the {\bf 3}
-  bucket. The number for the {\bf 3} bucket is 6 so this entry is placed in
-  position 6 and one is taken away from the number for the {\bf 3}
-  bucket. In line b3 the 61 is considered, it is in the {\bf 1} bucket and
-  the number for the {\bf 1} bucket is 3, this is placed in slot 3 and the
-  number for the {\bf 1} bucket is reduced to 2. This carries on until all
-  the entries are placed in b. \label{table_buckets}}
+  is marked \texttt{a}, the last two digits represent the {\bf 1} and
+  {\bf 3} buckets, there are three entries in each bucket. The new
+  array b is used to store the contents of the buckets, this is done
+  in lines b1-b7. Since 1 comes before 3, the {\bf 1} bucket entries
+  are assigned the first three slots in b and the {\bf 3} bucket the
+  slots 4-6. Thus, the number for the {\bf 3} bucket is set to 6,
+  which is the total number of entries in buckets for values less than
+  or equal to 3. First 23 is considered in line b2, since its digit is
+  3 it is in the {\bf 3} bucket. The number for the {\bf 3} bucket is
+  6 so this entry is placed in position 6 and one is taken away from
+  the number for the {\bf 3} bucket. In line b3 the 61 is considered,
+  it is in the {\bf 1} bucket and the number for the {\bf 1} bucket is
+  3, this is placed in slot 3 and the number for the {\bf 1} bucket is
+  reduced to 2. This carries on until all the entries are placed in
+  b. \label{table_buckets}}
 \end{table}
 
 
@@ -133,31 +138,29 @@ b7&21&41&61&53&63&23&0&3
 void radix_sort(int a[], int n, int a_bound)
 {
 
-  int exp_max=log10((double)a_bound)+1;
-  int a_sort[n];
-  int i,exp;
+   int exp_max=log10((double)a_bound)+1;
+   int a_sort[n];
+   int i,exp;
 
-  for(exp=0;exp<exp_max;exp++)
-    {
+   for(exp=0;exp<exp_max;exp++){
       int buckets[10]={0};
       int digit=pow(10,exp);
 
       for(i=0;i<n;i++)
-	buckets[a[i]/digit%10]++;
+         buckets[a[i]/digit%10]++;
 
       for(i=1;i<10;i++)
-	buckets[i]+=buckets[i-1];
+         buckets[i]+=buckets[i-1];
 
-      for(i=n-1;i>=0;i--)
-	{
+      for(i=n-1;i>=0;i--){
 	  buckets[a[i]/digit%10]--;
 	  a_sort[buckets[a[i]/digit%10]]=a[i];
-	}
+      }
 
       for(i=0;i<n;i++)
-	a[i]=a_sort[i];
+         a[i]=a_sort[i];
 
-    }
+   }
 }
 \end{lstlisting}
 \caption{Radix sort. Here a\_bound is the largest possible entry, this
