--- a/2015_16/7_quicksort/7_quicksort.tex
+++ b/2015_16/7_quicksort/7_quicksort.tex
@@ -382,7 +382,7 @@ of equal small entries with a few large entries mixed in.
 
 Quicksort is probably the most used sorting algorithm. Although its
 worst case behavior is $O(n^2)$ it usually runs at $O(n\log{n})$ and,
-in most applicationz, it usually runs faster than other $O(n\log{n})$
+in most applications, it usually runs faster than other $O(n\log{n})$
 algorithms. Furthermore, it is done in place, it doesn't require
 substantial amounts of extra memory.
 
