--- a/2015_16/7_quicksort/7_quicksort.tex
+++ b/2015_16/7_quicksort/7_quicksort.tex
@@ -357,9 +357,9 @@ void quick(int a[], int n)
 8&2&1&3&5&4&6
 \end{tabular}
 \caption{The division method for our implementation of quicksort. This
-  shows the location of i and j as quicksort is running with a partition value of 3. In line 7 i>j
+  shows the location of \texttt{i} and \texttt{j} as quicksort is running with a partition value of 3. In line 7 \texttt{i}$>$\texttt{j}
   so the algorithm stops and in line 8 the partition value is swapped
-  back to the place marked by i.\label{table_quick_careful}}
+  back to the place marked by \texttt{i}.\label{table_quick_careful}}
 \end{table}
 
 We have been assuming that the group is divided roughly in two at each
