missing left/right=NULL in make_head corrected

--- a/2015_16/11_binary_tree/11_binary_tree.tex
+++ b/2015_16/11_binary_tree/11_binary_tree.tex
@@ -87,6 +87,9 @@ struct node * make_node(int new_entry)
   struct node * a_node=(struct node *)malloc(sizeof(struct node));
   a_node->entry=new_entry;
 
+  a_node->left=NULL;
+  a_node->right=NULL;
+
   return a_node;
 }
 \end{lstlisting}
