--- a/2015_16/7_quicksort/7_quicksort.tex
+++ b/2015_16/7_quicksort/7_quicksort.tex
@@ -186,8 +186,8 @@ looking at three it makes it likely that it will give a reasonably
 even split.
 
 Before finally looking at the code for quicksort, we need to think a
-little bit about being careful about keeping track of where the split
-between the two piles. Furthermore, it is worthwhile not wasting what
+little bit about how to be careful about keeping track of where the split
+is between the two piles. Furthermore, it is worthwhile not wasting what
 we know about the partition value: its value lies between the two
 piles. Thus, at the end we can swap it to the point where the two
 piles join and then not include it in either since it is already in
