--- a/2015_16/11_binary_tree/11_binary_tree.tex
+++ b/2015_16/11_binary_tree/11_binary_tree.tex
@@ -24,7 +24,7 @@
 
 \begin{document}
 
-\subsection*{11 - binary tree}
+\subsection*{11 - binary trees}
 
 
 A binary tree is a data structure somewhat similar to a linked list
